--- a/notebooks/tripgo.ipynb
+++ b/notebooks/tripgo.ipynb
@@ -819,6 +819,9 @@
     "                        if len(providers):\n",
     "                            providers += ', '\n",
     "                        providers += name\n",
+    "                if providers == '':\n",
+    "                    # No other providers\n",
+    "                    providers = np.nan\n",
     "                df['other_providers'] = providers\n",
     "                routes.append(df)\n",
     "        except Exception as e:\n",
